k8s/frontend/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-ingress-http
  namespace: auction
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: auctionapp.online
      http:
        paths:
          - path: /.well-known/acme-challenge/
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-frontend
                port:
                  number: 80

    - host: api.auctionapp.online
      http:
        paths:
          - path: /.well-known/acme-challenge/
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 6001
