k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-frontend-ingress
  namespace: auction
spec:
  ingressClassName: nginx
  rules:
    - host: auction.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 6001
